fixing too much flying

--- a/app/assets/stylesheets/client/battlefield.scss
+++ b/app/assets/stylesheets/client/battlefield.scss
@@ -8,14 +8,6 @@
   @include no-text-select;
   @include border-radius;
 
-  .card.moving {
-    @include transition("left,top,rotate", 0.4s, ease-out);
-  }
-
-  .card.ui-draggable-dragging {
-    @include transition-property(none);
-  }
-
   position: relative;
   border: 1px dashed rgba(255, 255, 255, 0.54);
   background-color: rgba(30, 30, 30, 0.2);
